[workspace]
members = [
    "relayer",
    "indexer-tx-storage",
    "indexer",
#    "prover",
]
default-members = [
    "indexer",
    "relayer",
#    "prover",
]

[workspace.package]
authors = ["Dmitry Vdovin <voidxnull@gmail.com>"]
edition = "2021"

[patch.crates-io]
near-indexer = { git = "https://github.com/zeropoolnetwork/nearcore", branch = "zp/fix-deps", optional = true }
near-o11y = { git = "https://github.com/zeropoolnetwork/nearcore", branch = "zp/fix-deps", optional = true }
near-primitives = { git = "https://github.com/zeropoolnetwork/nearcore", branch = "zp/fix-deps", optional = true }
near-indexer-primitives = { git = "https://github.com/zeropoolnetwork/nearcore", branch = "zp/fix-deps", optional = true }
near-client-primitives = { git = "https://github.com/zeropoolnetwork/nearcore", branch = "zp/fix-deps", optional = true }
