[package]
name = "zeropool-relayer"
version = "0.4.0"
edition = "2021"

[dependencies]
axum = { version = "0.6.2", features = ["macros"] }
serde = "1.0.145"
serde_repr = "0.1.10"
serde_json = "1.0.85"
sqlx = { version = "0.6.2", features = ["postgres", "runtime-tokio-native-tls", "json", "bigdecimal"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
libzeropool-rs = { version = "0.9.1", features = ["multicore", "native", "kvdb-persy"] }
fawkes-crypto = { version = "4.2.4", features = ["serde_support"] }
dotenv = "0.15.0"
anyhow = "1.0.65"
base64 = "0.21.0"
envy = "0.4.2"
borsh = "0.9.3"
num-traits = "0.2.15"
redis = { version = "0.22.1", features = ["tokio-comp"] }
hex = { version = "0.4.3", features = ["serde"] }
bincode = "1.3.3"
uuid = { version = "1.2.2", features = ["v4", "serde"] }
persy = "1.4.1"
scopeguard = "1.1.0"
itertools = "0.10.5"
byteorder = "1"
secp256k1 = "0.21.0"
thiserror = "1.0.39"
reqwest = "0.11.14"
tower-http = { version = "0.3.5", features = ["trace", "cors"] }
bs58 = "0.4.0"
zeropool-tx = { version = "0.1.1" }

web3 = { version = "0.18.0", optional = true }
waves-rust = { version = "0.2.4", optional = true }
near-jsonrpc-client = { git = "https://github.com/voidxnull/near-jsonrpc-client-rs", branch = "zeropool", optional = true }
near-jsonrpc-primitives = { git = "https://github.com/zeropoolnetwork/nearcore", branch = "zp/fix-deps", optional = true }
near-primitives = { git = "https://github.com/zeropoolnetwork/nearcore", branch = "zp/fix-deps", optional = true }
near-crypto = { git = "https://github.com/zeropoolnetwork/nearcore", branch = "zp/fix-deps", optional = true }
# substrate-api-client = { version = "0.11.0", optional = true }

[features]
default = ["evm_backend", "waves_backend", "near_backend"]
evm_backend = ["dep:web3"]
near_backend = ["dep:near-jsonrpc-client", "dep:near-jsonrpc-primitives", "dep:near-primitives", "dep:near-crypto"]
waves_backend = ["dep:waves-rust"]
substrate_backend = []

[dev-dependencies]
tempfile = "3.3.0"
test-case = "3.0.0"

[patch.crates-io]
near-indexer = { git = "https://github.com/zeropoolnetwork/nearcore", branch = "zp/fix-deps", optional = true }
near-o11y = { git = "https://github.com/zeropoolnetwork/nearcore", branch = "zp/fix-deps", optional = true }
near-primitives = { git = "https://github.com/zeropoolnetwork/nearcore", branch = "zp/fix-deps", optional = true }
near-indexer-primitives = { git = "https://github.com/zeropoolnetwork/nearcore", branch = "zp/fix-deps", optional = true }
near-client-primitives = { git = "https://github.com/zeropoolnetwork/nearcore", branch = "zp/fix-deps", optional = true }
