[package]
name = "zeropool-indexer-api"
version = "0.1.0"
edition = "2021"

[dependencies]
zeropool-indexer-tx-storage = { path = "../indexer-tx-storage" }

tokio = { version = "1", features = ["full"] }
axum = "0.6.2"
envconfig = "0.10.0"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
serde_json = "1.0.86"
serde = "1.0.145"
dotenv = "0.15.0"
anyhow = "1.0.65"
envy = "0.4.2"