[package]
name = "zeropool-indexer-tx-storage"
version = "0.1.0"
edition = "2021"

[dependencies]
sqlx = { version = "0.6.2", optional = true, features = ["runtime-tokio-native-tls", "json", "bigdecimal", "time", "offline"] }
serde = "1.0.145"
anyhow = "1.0.65"
serde_with = { version = "2.0.1", features = ["base64"] }
tracing = "0.1.37"

[features]
default = ["postgres"]
postgres = ["sqlx", "sqlx/postgres"]