[package]
name = "zeropool-indexer-worker"
version = "0.1.0"
edition = "2021"

[dependencies]
zeropool-indexer-tx-storage = { path = "../indexer-tx-storage" }

tokio = { version = "1", features = ["full"] }
envconfig = "0.10.0"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
syn = { version = "1.0.102", features = ["full"] }
anyhow = "1.0.65"
num-traits = "0.2.15"
base64 = "0.21.0"
dotenv = "0.15.0"
serde = "1.0.145"
envy = "0.4.2"
futures = "0.3.26"
hex = "0.4.3"
async-trait = "0.1.64"
serde_json = "1.0.96"
reqwest = "0.11.17"

# Backend-specific dependencies
web3 = { version = "0.18.0", optional = true }
near-indexer = { git = "https://github.com/zeropoolnetwork/nearcore", branch = "zp/fix-deps", optional = true }
near-lake-framework = { version = "0.6.1", optional = true }
near-jsonrpc-primitives = { git = "https://github.com/zeropoolnetwork/nearcore", branch = "zp/fix-deps", optional = true }
near-primitives = { git = "https://github.com/zeropoolnetwork/nearcore", branch = "zp/fix-deps", optional = true }
actix = { version = "0.13.0", optional = true }


[features]
default = ["evm", "near-lake-framework", "near-indexer-framework", "near-archive-node"]
evm = ["dep:web3"]
near-indexer-framework = ["dep:near-indexer", "dep:actix"]
near-lake-framework = ["dep:near-lake-framework"]
near-archive-node = ["dep:near-jsonrpc-primitives", "dep:near-primitives"]

