[package]
name = "zeropool-indexer"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.5.16"
tokio = { version = "1", features = ["full"] }
envconfig = "0.10.0"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
web3 = { version = "0.18.0", optional = true }
syn = { version = "1.0.102", features = ["full"] }
anyhow = "1.0.65"
#near-jsonrpc-client = { version = "0.4.0", optional = true }
#near-jsonrpc-primitives = { version = "0.15.0", optional = true }
#near-primitives = { version = "0.15.0", optional = true }
near-indexer = { git = "https://github.com/near/nearcore", optional = true }
sqlx = { version = "0.6.2", optional = true, features = ["postgres", "runtime-tokio-native-tls", "json", "bigdecimal", "time", "offline"] }

num-traits = "0.2.15"
borsh = "0.9.3"
serde_json = "1.0.86"
base64 = "0.13.0"
dotenv = "0.15.0"
serde = "1.0.145"
envy = "0.4.2"
serde_with = { version = "2.0.1", features = ["base64"] }
redb = "0.9.0"

[features]
default = ["postgres_storage", "near", "near-indexer-explorer"]
evm = ["web3"]
near = []
postgres_storage = ["sqlx"]
near-indexer-explorer = []
near-indexer-framework = ["near-indexer"]
