[package]
name = "zeropool-indexer"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.6.2"
tokio = { version = "1", features = ["full"] }
envconfig = "0.10.0"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
web3 = { version = "0.18.0", optional = true }
syn = { version = "1.0.102", features = ["full"] }
anyhow = "1.0.65"
near-indexer = { git = "https://github.com/near/nearcore", optional = true }
sqlx = { version = "0.6.2", optional = true, features = ["postgres", "runtime-tokio-native-tls", "json", "bigdecimal", "time", "offline"] }
near-lake-framework = { version = "0.6.1", optional = true }
actix = { version = "0.13.0", optional = true }

num-traits = "0.2.15"
borsh = "0.9.3"
serde_json = "1.0.86"
base64 = "0.13.0"
dotenv = "0.15.0"
serde = "1.0.145"
envy = "0.4.2"
serde_with = { version = "2.0.1", features = ["base64"] }
reqwest = "0.11.13"

[features]
default = ["postgres_storage", "near", "near-indexer-framework"]
evm = ["dep:web3"]
near = []
postgres_storage = ["dep:sqlx"]
near-indexer-explorer = []
near-indexer-framework = ["dep:near-indexer", "dep:actix"]
near-lake-framework = ["dep:near-lake-framework"]

