[package]
name = "zeropool-relayer-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.6.2"
serde = "1.0.145"
sqlx = { version = "0.6.2", features = ["postgres", "runtime-tokio-native-tls", "json", "bigdecimal"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
serde_json = "1.0.85"
libzeropool-rs = { version = "0.9.1", features = ["multicore", "native", "kvdb-persy"] }
dotenv = "0.15.0"
anyhow = "1.0.65"
base64 = "0.21.0"
envy = "0.4.2"
borsh = "0.9.3"
num-traits = "0.2.15"
redis = { version = "0.22.1", features = ["tokio-comp"] }
hex = { version = "0.4.3", features = ["serde"] }
bincode = "1.3.3"
uuid = { version = "1.2.2", features = ["v4", "serde"] }
persy = "1.4.1"
scopeguard = "1.1.0"
itertools = "0.10.5"
serde_repr = "0.1.10"

web3 = { version = "0.18.0", optional = true }
waves-rust = { version = "0.2.2", optional = true }
near-jsonrpc-client = { git = "https://github.com/zeropoolnetwork/nearcore", branch = "zp/fix-deps", optional = true }

[features]
default = ["evm_backend"]
evm_backend = ["dep:web3"]
near_backend = ["dep:near-jsonrpc-client"]
waves_backend = ["dep:waves-rust"]

[dev-dependencies]
tempfile = "3.3.0"
test-case = "3.0.0"
